app/main.scss
* {
	box-sizing: border-box;
}

html, body {
	overflow: hidden;
	padding: 0;
	margin: 0;
	position: fixed;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	width: 100%;
	height: 100%;
}

.background__desert {
	background-image: url('../images/background-desktop.jpg');
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;
	position: absolute;
	top: 0;
	left: -70px;
	bottom: 0;
	right: -70px;
}

.background__surround {
	background-image: url('../images/background-desktop-hand--01.png');
	background-size: auto 100%;
	background-repeat: no-repeat;
	background-position: center;
	position: absolute;
	top: 0;
	left: -70px;
	bottom: 0;
	right: -70px;
}

.app {
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	margin: auto;
	background: #111;
	// perspective: 4000px;
	overflow: hidden;
}

.app--phone {
}

.app--desktop {
	width: 54vh;
	height: 96vh;
}

.flipper {
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	transition: transform 0.8s cubic-bezier(0.165, 0.84, 0.44, 1)
}

.flipper--flipped {
	// transform: translateZ(0) rotateY(180deg);
}

.credits {
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	transform: translateX(100%);
	background-image: url('../images/portrait/background.jpg');
	background-size: cover;
	background-position: center center;
	padding: 20px;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	pointer-events: none;
	transition: transform 1s cubic-bezier(0.165, 0.84, 0.44, 1);
}

.flipper--flipped .credits {
	transform: translateX(0);
}

.credits__credit {
	margin-bottom: 12px;
	text-align: center;
	font-family: 'Poppins', sans-serif;
	-webkit-font-smoothing: antialiased;
	text-rendering: optimizeLegibility;
	text-decoration: none;
	color: #000;

	.app--desktop & {
		margin-bottom: 18px;
	}
}

.credits__name,
.credits__role {
	margin: 0;
	line-height: 1em;
	text-size-adjust: none;
	-webkit-text-size-adjust: none;
}

.credits__role {
	font-size: 11px;
	font-weight: 400;
	margin-bottom: 2px;

	.app--desktop & {
		font-size: 13px;
		margin-bottom: 4px;
	}
}

.credits__name {
	font-weight: 600;
	font-size: 15px;

	.app--desktop & {
		font-size: 17px;
	}
}

.credits__credit:last-child {
	margin-bottom: 0;
}

.flipper--flipped .credits {
	pointer-events: all;
}

.credits__image {
	width: 70%;
	display: block;
	margin: 0 auto 15px auto;
	height: auto;

	.app--desktop & {
		width: 85%;
		margin-bottom: 17px;
	}
}


.portrait,
.portrait__layer {
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	background-size: auto 100%;
	overflow: hidden;
}

.portrait {
	transition: opacity 0.33s ease-in-out;
}

.flipper--flipped .portrait {
	opacity: 0;
}

.portrait__layer {
	transition: opacity 0.15s ease-out;
}

.portrait__layer--inactive {
	opacity: 0;
}

.portrait__layer--active {
	opacity: 1;
}

.portrait__layer-image {
	position: absolute;
	top: 50%;
	left: 50%;
	height: auto;
	width: 100%;
	transform: translate(-50%, -50%);
}

@keyframes sprite {
	100% {
		transform: translateX(-100%);
	}
}

.portrait__layer-sprite {
	position: absolute;
	top: 50%;
	left: 50%;
	height: auto;
	width: 100%;
	transform: translate(-50%, -50%);
}

.portrait__layer-sprite-image {
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: auto;
	animation-duration: 2s;
	animation-timing-function: steps(15);
	animation-iteration-count: infinite;
	animation-name: sprite;
}

.portrait__layer-sprite-spacer {
	height: auto;
	width: 100%;
	position: relative;
	visibility: hidden;
	opacity: 0;
}

@keyframes background {
	100% {
		transform: translateY(-100%);
	}
}

.portrait__background {
	position: absolute;
	top: 50%;
	left: 50%;
	height: auto;
	width: 100%;
	transform: translate(-50%, -50%);
}

.portrait__background-image {
	position: absolute;
	top: 0;
	left: 0;
	height: auto;
	width: 100%;
	animation-duration: 2s;
	animation-timing-function: steps(15);
	animation-iteration-count: infinite;
	animation-name: background;
	animation-play-state: paused;
}

.portrait__background-image--playing {
	animation-play-state: running;	
}

.portrait__background-spacer {
	height: 100%;
	width: auto;
	position: relative;
	visibility: hidden;
	opacity: 0;
}

.layer-selector {
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100%;
	height: 250px;
	overflow: scroll;
	background-image: url('../images/ui/shelf.png');
	background-size: 100% auto;
	background-repeat: no-repeat;
	background-position: bottom left;
	-webkit-overflow-scrolling: touch;
	cursor: pointer;
	// transition: transform 0.33s ease-in-out;
	transition: transform 0.8s cubic-bezier(0.165, 0.84, 0.44, 1)
}

.layer-selector--down {
	transform: translateY(100%);
}

.app--desktop .layer-selector {
	overflow: hidden;
}

.layer-selector--desktop {
	// overflow: hidden;
	cursor: -webkit-grab;
	cursor: -moz-grab;
	cursor: grab;
}

.layer-selector--desktop:active {
	// overflow: hidden;
	cursor: -webkit-grabbing;
	cursor: -moz-grabbing;
	cursor: grabbing;
}

.layer-selector__transform {
	position: absolute;
	bottom: 0;
	left: 0;
	top: 0;
	right: 0;
	transition: transform 1.66s cubic-bezier(0, 0, 0.12, 0.88) 0.4s;
}

.layer-selector__transform--active {
	transform: translateX(99%);
}

.layer-selector__scroller {
	white-space: nowrap;
	padding: 0;
	display: inline-flex;
	align-items: flex-end;
	margin: 0;
	height: 100%;
	padding: 0 15px;
}

.layer-option {
	display: inline-block;
	position: relative;
	vertical-align: bottom;
	width: auto;
}

.layer-option--format-wide {
	height: 100px;
}

.layer-option--format-regular {
	height: 180px;
}

.layer-option--format-tall {
	height: 250px;
}

.layer-option:last-child {
	margin-right: 0;
}

.layer-option--active {

}

.layer-option__image {
	display: inline-block;
	width: auto;
	height: 100%;
	position: absolute;
	transition: opacity 0.3s ease;
	user-select: none;
}

.layer-option__image--inactive {
	position: relative;
}

.layer-option__image--active {
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	margin: auto;
	opacity: 0;
}

.layer-option--active .layer-option__image--active {
	opacity: 1;
}

.loader {
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	background: rgba(#443a2e, 0.8);
	overflow: hidden;
	transition: background 0.6s ease-in;
}

.loader--hidden {
	pointer-events: none;
	background: rgba(#666, 0);	
}

.loader__inner {
	position: absolute;
	top: 0;
	left: -50px;
	bottom: 0;
	right: -50px;
	background: #fed3c2;
	transition: transform 0.6s ease-in;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	box-shadow: 0 3px 20px rgba(#000, 0.25);
}

.loader__inner--hidden {
	transform: translateY(-109%) rotate(-4deg);
	pointer-events: none;
}

.loader__image {
	width: 410px;
	max-width: 80vw;
	margin-bottom: 15px;
}

.loader__progress {
	max-width: 80vw;
	position: relative;
	background-size: contain;
	background-repeat: no-repeat;
	background-position: center;
}

.loader__progress-surround {
	width: 330px;
	max-width: 80vw;
	position: relative;
}


.loader__progress-bar {
	position: absolute;
	top: 17%;
	left: 1%;
	height: 44%;
	background: #fff;
	border-radius: 111px;
	max-width: 98%;
}

.credits-button {
	width: 60px;
	height: 60px;
	position: relative;
	top: 15px;
	left: 15px;
	cursor: pointer;
	transition:
		opacity 0.08s ease,
		filter 0.08s ease,
		transform 0.33s ease-in-out;
}

.credits-button:active {
	filter: brightness(0.75);
	opacity: 0.8;
}

.credits-button__icon {
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	background-size: contain;
	background-position: center center;
	background-repeat: no-repeat;
	z-index: 111;
}

.credits-button__icon--hamburger {
	background-image: url('../images/ui/credits-btn.png');
}


.credits-button__icon--back {
	background-image: url('../images/ui/credits-btn-back.png');
	display: none;
}

.credits-button--back .credits-button__icon--back {
	display: block;
}

.credits-button--back .credits-button__icon--hamburger {
	display: none;
}

